--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Whoopsies! An Issue Tracker for your Oopsies!"
     />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/exclamation.png" />
     <title>Whoopsies!</title>
   </head>
   <body>
